--- a/Swoop.EL.Company/appsettings.json
+++ b/Swoop.EL.Company/appsettings.json
@@ -9,7 +9,7 @@
   "AllowedHosts": "*",
   "CustomAppSettings": {
     "NumberOfRecords": 5,
-    "ApiURL": "https://api.company-information.service.gov.uk",
-    "ApiKey": "04ad2283-1b39-417a-b493-98dd3809ee59"
+    "ApiURL": "",
+    "ApiKey": ""
   }
 }
