--- a/Swoop.EL.Company/appsettings.json
+++ b/Swoop.EL.Company/appsettings.json
@@ -11,5 +11,8 @@
     "NumberOfRecords": 5,
     "ApiURL": "",
     "ApiKey": ""
+  },
+  "ConnectionStrings": {
+    "DistributedCache": ""
   }
 }
