--- a/Swoop.EL.Company/appsettings.json
+++ b/Swoop.EL.Company/appsettings.json
@@ -14,5 +14,16 @@
   },
   "ConnectionStrings": {
     "DistributedCache": ""
+  },
+  "CacheAppSettings": {
+    "CacheProvider": "RedisCacheProvider",
+    "Provider": "RedisCacheProvider.RedisCacheProvider"
+  },
+  "RedisConfiguration": {
+    "host": "",
+    "port": "",
+    "password": "",
+    "databaseID": ""
   }
+
 }
