Finish configuration of caching

--- a/Swoop.EL.Company/appsettings.json
+++ b/Swoop.EL.Company/appsettings.json
@@ -17,13 +17,15 @@
   },
   "CacheAppSettings": {
     "CacheProvider": "RedisCacheProvider",
-    "Provider": "RedisCacheProvider.RedisCacheProvider"
+    "Provider": "RedisCacheProvider.RedisCacheProvider",
+    "Enabled": true
   },
-  "RedisConfiguration": {
+  "RedisConfiguration": { //mplementation of the interface ICacheProvider requires this section here
     "host": "",
     "port": "",
     "password": "",
-    "databaseID": ""
+    "databaseID": "",
+    "ExpiresInHours": 0
   }
 
 }
