--- a/Swoop.EL.Company/appsettings.json
+++ b/Swoop.EL.Company/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ApplicationInsights": {
+    "InstrumentationKey": "123"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
