--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,3 +1,5 @@
+# This is a basic workflow to help you get started with Actions
+
 name: CI
 
 # Controls when the workflow will run
@@ -41,7 +43,7 @@ jobs:
         with:
           files: './Swoop.EL.Company/myapp/appsettings.json'
         env:
-          ApplicationInsights.InstrumentationKey:  ${{ secrets.APPLICATIONINSIGHTS_INSTRUMENTATIONKEY }}
+          ApplicationInsights.InstrumentationKey: ${{ secrets.APPLICATIONINSIGHTS_INSTRUMENTATIONKEY }}
           CustomAppSettings.ApiURL: ${{ secrets.CUSTOMAPPSETTINGS_APIURL }}
           CustomAppSettings.ApiKey: ${{ secrets.CUSTOMAPPSETTINGS_APIKEY }}
           CacheAppSettings.CacheProvider: ${{ secrets.CACHEAPPSETTINGS_CACHEPROVIDER }}
