fix docker file

--- a/Swoop.EL.Company/appsettings.json
+++ b/Swoop.EL.Company/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ApplicationInsights": {
-    "InstrumentationKey": "123"
+    "InstrumentationKey": "aa0a80d4-ccab-4853-b454-be2ad90439e7"
   },
   "Logging": {
     "LogLevel": {
@@ -12,8 +12,8 @@
   "AllowedHosts": "*",
   "CustomAppSettings": {
     "NumberOfRecords": 5,
-    "ApiURL": "",
-    "ApiKey": ""
+    "ApiURL": "https://api.company-information.service.gov.uk",
+    "ApiKey": "04ad2283-1b39-417a-b493-98dd3809ee59"
   },
   "ConnectionStrings": {
     "DistributedCache": ""
@@ -21,7 +21,7 @@
   "CacheAppSettings": {
     "CacheProvider": "RedisCacheProvider",
     "Provider": "RedisCacheProvider.RedisCacheProvider",
-    "Enabled": true
+    "Enabled": false
   },
   "RedisConfiguration": { //mplementation of the interface ICacheProvider requires this section here
     "host": "",
