--- a/Swoop.EL.Company/appsettings.json
+++ b/Swoop.EL.Company/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ApplicationInsights": {
-    "InstrumentationKey": "aa0a80d4-ccab-4853-b454-be2ad90439e7"
+    "InstrumentationKey": ""
   },
   "Logging": {
     "LogLevel": {
@@ -13,7 +13,7 @@
   "CustomAppSettings": {
     "NumberOfRecords": 5,
     "ApiURL": "https://api.company-information.service.gov.uk",
-    "ApiKey": "04ad2283-1b39-417a-b493-98dd3809ee59"
+    "ApiKey": ""
   },
   "ConnectionStrings": {
     "DistributedCache": ""
