--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ on:
     
   workflow_dispatch:
 env:
-  AZURE_WEBAPP_NAME: SwoopEL
+  AZURE_WEBAPP_NAME: Swoop
   AZURE_WEBAPP_PACKAGE_PATH: './Swoop.EL.Company'      # set this to the path to your web app project, defaults to the repository root
   DOTNET_VERSION: '3.1.x'           # set this to the dot net version to use
 
